--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   padding: 0;
   margin: 0;
+  color: white;
 }
 
 .container {
@@ -135,11 +136,16 @@ header .nav-links li:last-child {
   color: white;
   font-size: 1.25rem;
 }
-
-.results {
-  padding: 0;
-  margin: 0;
+.result-title {
+  font-size: 1.50rem;
+  color: white;
+  font-weight: 600;
+  margin: 0px;
   margin-top: 20px;
+  padding-left: 20px;
+}
+.results {
+  text-decoration: none;
 }
 
 .results li {
@@ -149,6 +155,8 @@ header .nav-links li:last-child {
 .result-card {
   display: flex;
   margin-bottom: 20px;
+  padding-left: 30px;
+  
 }
 
 .result-card .poster-wrapper img,
@@ -255,7 +263,7 @@ header .nav-links li:last-child {
 }
 
 .movie-card .inner-card-controls {
-  display: inline;
+  display:inline-flex;
   background-color: red;
   position: absolute;
   bottom: 20px;
@@ -294,6 +302,37 @@ header .nav-links li:last-child {
 
 .movie-page .no-movies {
   color: #c4c4c4;
-  font-size: 3rem;
+  font-size: 2rem;
   text-align: center;
+}
+
+/* Detail Page */
+
+.detail-page {
+  padding: 30px 0;
+  display: block;
+}
+
+.detail-page .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.detail-page .heading {
+  color: white;
+  margin: 0;
+}
+
+.detail-card {
+  display: flex;
+  align-items:center;
+  
+}
+.details {
+  padding: 30px;
+  font-size: 1.0 rem;
+  color: white;
+  margin: 0;
 }
