--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,8 @@ body {
   margin-left: auto;
 }
 
+
+
 @media (min-width: 768px) {
   .container {
     width: 750px;
@@ -46,17 +48,17 @@ body {
 }
 
 .btn {
-  padding: 10px 15px;
+  padding: 5px 10px;
   background-color: Magenta;
   color: white;
   border-radius: 5px;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 600;
   display: inline-block;
   border: none;
   font-size: 1rem;
   transition: all 0.3s ease;
-  line-height: 1.1;
+  line-height: 1.0;
 }
 
 .btn:hover {
@@ -122,7 +124,7 @@ header .nav-links li:last-child {
 
 /* Add Page */
 .add-content {
-  padding: 50px 0;
+  padding: 40px 0;
   max-width: 600px;
   margin: 0 auto;
 }
@@ -142,7 +144,7 @@ header .nav-links li:last-child {
   font-weight: 600;
   margin: 0px;
   margin-top: 20px;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 .results {
   text-decoration: none;
@@ -155,7 +157,6 @@ header .nav-links li:last-child {
 .result-card {
   display: flex;
   margin-bottom: 20px;
-  padding-left: 30px;
   
 }
 
@@ -220,6 +221,7 @@ header .nav-links li:last-child {
 .movie-page .heading {
   color: white;
   margin: 0;
+  text-decoration: underline;
 }
 
 .movie-grid {
@@ -290,7 +292,7 @@ header .nav-links li:last-child {
   background-color: transparent;
   border: none;
   transition: all 0.3s ease;
-  font-size: 1.25rem;
+  font-size: 1.15rem;
   padding: 5px;
   margin: 0;
 }
@@ -310,7 +312,7 @@ header .nav-links li:last-child {
 
 .detail-page {
   padding: 30px 0;
-  display: block;
+  display: flex;
 }
 
 .detail-page .header {
@@ -323,16 +325,32 @@ header .nav-links li:last-child {
 .detail-page .heading {
   color: white;
   margin: 0;
+  text-decoration: underline;
 }
 
 .detail-card {
   display: flex;
   align-items:center;
-  
+}
+.detail-card img {
+  width: 75%;
+  display: block;
 }
 .details {
   padding: 30px;
   font-size: 1.0 rem;
   color: white;
   margin: 0;
+}
+
+@media (max-width: 768px) {
+  .detail-card {
+    display: block;
+  }
+  .detail-card img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
 }
